# hybrid-qgd

./: .gitignore  .readme  README.md  final_compare.py  pyproject.toml  requirements.txt  run_all_experiments.py  setup.py
4_qubit_res/: exp1_convergence_summary.csv  exp2_arithmetic_summary.csv  exp2_metrics.csv  exp3_hardware_validation.csv  exp4_noise_sensitivity.csv
6_qubit_res/: exp1_convergence_summary.csv  exp2_arithmetic_summary.csv  exp2_metrics.csv  exp3_hardware_validation.csv  exp4_noise_sensitivity.csv
8_qubit_res/: exp1_convergence_summary.csv  exp2_arithmetic_summary.csv  exp2_metrics.csv  exp3_hardware_validation.csv  exp4_noise_sensitivity.csv
configs/: config.yaml  ibm_credentials.yaml.example
docs/: architecture.md
experiments/: exp1_convergence.py  exp2_arithmetic_accuracy.py  exp3_hardware_validation.py  exp4_noise_sensitivity.py
src/: hybrid_optimizer.py  objective_functions.py  qft_arithmetic.py
src/hybrid_qgd/: __init__.py  hybrid_optimizer.py  noise_model.py  parameter_shift.py  qft_arithmetic.py  quantum_backend.py  utils.py
tests/: test_hybrid_optimizer.py  test_parameter_shift.py  test_qft_arithmetic.py
