[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hybrid_qgd"
version = "1.0.0"
description = "Hybrid Quantum-Classical Gradient Descent via QFT-Based Arithmetic"
readme = "README.md"
authors = [{name = "Souptik Datta", email = "souptik@example.com"}]  # update email
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "qiskit>=2.0.0",
    "qiskit-aer>=0.15.0",
    "qiskit-ibm-runtime>=0.20.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "matplotlib>=3.8.0",
    "pyyaml>=6.0.1",
    "tqdm>=4.66.0",
    "pandas>=2.2.0",
    "seaborn>=0.13.0",
]

[project.urls]
Homepage = "https://github.com/SouptikDSRS/hybrid-qgd"
Repository = "https://github.com/SouptikDSRS/hybrid-qgd.git"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hybrid_qgd = ["py.typed"]  # optional, for type hints

# Optional: include non-code files if needed
# include = ["configs/*.yaml", "docs/*.md"]